--- a/src/HotelRentalApi.Abstractions/HotelRentalApi.Abstractions.csproj
+++ b/src/HotelRentalApi.Abstractions/HotelRentalApi.Abstractions.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+		<ItemGroup>
+				<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+				<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+				<PackageReference Include="OperationResultTools.AspNetCore" Version="1.0.12" />
+		</ItemGroup>
 
 </Project>
