--- a/src/HotelRentalApi.Authorization/HotelRentalApi.Authorization.csproj
+++ b/src/HotelRentalApi.Authorization/HotelRentalApi.Authorization.csproj
@@ -1,9 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+		<ItemGroup>
+				<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.10" />
+		</ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HotelRentalApi.Authentication\HotelRentalApi.Authentication.csproj" />
+  </ItemGroup>
 
 </Project>
